--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Tickteee</title>
+    <title><%= @title || "Ticketeee" %></title>
     <%= csrf_meta_tags %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -41,7 +41,8 @@
     </div>
 
     <div class="container">
-
+    
+      <!-- flash message -->
       <% flash.each do |type, msg| %>
         <div class="alert alert-<%= type == :notice ? "success" : "error" %>">
           <a class="close" data-dismiss="alert">×</a>
@@ -50,6 +51,8 @@
       <% end %>
 
       <%= yield %>
+
+      <%= debug(params) %>
     </div> <!-- /container -->
 
     <!-- Le javascript
