--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,2 +1,3 @@
+<% title(@project.name, "Projects") %>
 <h2>Project: <%= @project.name %> </h2>
 <%= link_to "Back", projects_path, :class => "btn" %>
