--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,5 @@
 <% title(@project.name, "Projects") %>
 <h2>Project: <%= @project.name %> </h2>
 <%= link_to "Back", projects_path, :class => "btn" %>
+<%= link_to "Edit Project", edit_project_path(@project) %>
+
