--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,4 +2,6 @@
 <h2>Project: <%= @project.name %> </h2>
 <%= link_to "Back", projects_path, :class => "btn" %>
 <%= link_to "Edit Project", edit_project_path(@project) %>
+<%= link_to "Delete Project", @project, :method => :delete,
+                              :confirm => "Are you sure you want to delete this project?" %>
 
