Added displaying a list of tickets for projects

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,7 @@
         </div>
       <% end %>
 
+      <h1><%= link_to "Ticketeee", root_path %></h1>
       <%= yield %>
 
       <%= debug(params) %>
