--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,4 +1,5 @@
 <div id="ticket">
   <h2><%= @ticket.title %></h2>
   <%= simple_format(@ticket.description) %>
+  <%= link_to "Edit Ticket", edit_project_ticket_path(@ticket) %>
 </div>
