--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -2,4 +2,6 @@
   <h2><%= @ticket.title %></h2>
   <%= simple_format(@ticket.description) %>
   <%= link_to "Edit Ticket", edit_project_ticket_path(@ticket) %>
+  <%= link_to "Delete Ticket", project_ticket_path(@ticket), :method => :delete,
+                              :confirm => "Are you sure you want to delete this project?" %>
 </div>
