--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,13 @@
                 <li><%= link_to "Link2", "/path2"  %></li>
                 <li><%= link_to "Link3", "/path3"  %></li>
             </ul>
+            <p class="navbar-text pull-right">
+            <% if user_signed_in? %>
+              Signed in as <%= current_user.email %>
+            <% else %>
+              <%= link_to "Sign up", new_user_registration_path %>
+            <% end %>
+            </p>
           </div><!--/.nav-collapse -->
         </div>
       </div>
