Added signing via form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,7 @@
         </div>
       <% end %>
 
-      <h1><%= link_to "Ticketeee", root_path %></h1>
+      <%= link_to "Sign in", new_user_session_path %>
       <%= yield %>
 
       <%= debug(params) %>
