--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,6 +1,7 @@
 <div id="ticket">
   <h2><%= @ticket.title %></h2>
   <%= simple_format(@ticket.description) %>
+  <h3>Created by <%= @ticket.user.email %> </h3>
   <%= link_to "Edit Ticket", edit_project_ticket_path(@ticket) %>
   <%= link_to "Delete Ticket", project_ticket_path(@ticket), :method => :delete,
                               :confirm => "Are you sure you want to delete this project?" %>
