--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,12 +1,13 @@
 <% title(@project.name, "Projects") %>
 <h2>Project: <%= @project.name %> </h2>
-<%= link_to "Back", projects_path, :class => "btn" %>
-<%= link_to "Edit Project", edit_project_path(@project) %>
-<%= link_to "Delete Project", @project, :method => :delete,
-                              :confirm => "Are you sure you want to delete this project?" %>
+  <%= link_to "Back", projects_path, :class => "btn" %>
+<%= admins_only do %>
+  <%= link_to "Edit Project", edit_project_path(@project) %>
+  <%= link_to "Delete Project", @project, :method => :delete,
+                                :confirm => "Are you sure you want to delete this project?" %>
+<% end %>
 
 <%= link_to "New Ticket", new_project_ticket_path(@project) %>
-
 <ul id="tickets">
   <% @project.tickets.each do |ticket| %>
     <li>
