--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -5,6 +5,10 @@
 <p>
   <%= f.input :password %>
 </p>
+<p>
+  <%= f.check_box :admin %>
+  <%= f.label :admin, "Is an admin?" %>
+</p>
   <%= f.submit %>
 <% end %>
 
