--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -2,6 +2,6 @@
 <h1>Users</h1>
 <ul>
   <% @users.each do |user| %>
-    <li><%= link_to user.email, admin_user_path(user) %></li>
+    <li><%= link_to user, admin_user_path(user) %></li>
   <% end %>
 </ul>
