--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -2,7 +2,13 @@
   <h2><%= @ticket.title %></h2>
   <%= simple_format(@ticket.description) %>
   <h3>Created by <%= @ticket.user.email %> </h3>
-  <%= link_to "Edit Ticket", edit_project_ticket_path(@ticket) %>
-  <%= link_to "Delete Ticket", project_ticket_path(@ticket), :method => :delete,
+
+  <%= authorized?("edit tickets", @project) do %>
+    <%= link_to "Edit Ticket", edit_project_ticket_path(@ticket) %>
+  <% end %>
+
+  <%= authorized?("delete tickets", @project) do %>
+    <%= link_to "Delete Ticket", project_ticket_path(@ticket), :method => :delete,
                               :confirm => "Are you sure you want to delete this project?" %>
+  <% end %>
 </div>
