--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,7 @@
               <%= admins_only do %>
                 <li><%= link_to "Admin", admin_root_path %></li>
               <% end %>
+              <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
             </ul>
             <p class="navbar-text pull-right">
             <% if user_signed_in? %>
