--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -3,6 +3,17 @@
   <%= simple_format(@ticket.description) %>
   <h3>Created by <%= @ticket.user.email %> </h3>
 
+  <% if @ticket.asset.exists? %>
+    <h3>Attached File</h3>
+    <div class="asset">
+      <p>
+        <%= link_to File.basename(@ticket.asset.path), @ticket.asset.url %>
+      </p>
+      <p><small><%= number_to_human_size(@ticket.asset.size) %>
+        (<%= @ticket.asset.content_type %>)
+      </small></p>
+    </div>
+  <% end %>
   <%= authorized?("edit tickets", @project) do %>
     <%= link_to "Edit Ticket", edit_project_ticket_path(@ticket) %>
   <% end %>
