--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -3,15 +3,17 @@
   <%= simple_format(@ticket.description) %>
   <h3>Created by <%= @ticket.user.email %> </h3>
 
-  <% if @ticket.asset.exists? %>
-    <h3>Attached File</h3>
-    <div class="asset">
-      <p>
-        <%= link_to File.basename(@ticket.asset.path), @ticket.asset.url %>
-      </p>
-      <p><small><%= number_to_human_size(@ticket.asset.size) %>
-        (<%= @ticket.asset.content_type %>)
-      </small></p>
+  <% if @ticket.assets.exists? %>
+    <h3>Attached Files</h3>
+    <div class="assets">
+      <% @ticket.assets.each do |asset| %>
+        <p>
+          <%= link_to File.basename(asset.asset_file_name), asset.asset.url %>
+        </p>
+        <p><small><%= number_to_human_size(asset.asset.size) %>
+          (<%= asset.asset.content_type %>)
+        </small></p>
+      <% end %>
     </div>
   <% end %>
   <%= authorized?("edit tickets", @project) do %>
