--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -25,3 +25,14 @@
                               :confirm => "Are you sure you want to delete this project?" %>
   <% end %>
 </div>
+
+<%= render "comments/form" %>
+
+<h3>Comments</h3>
+<div id="comments">
+<% if @ticket.comments.exists? %>
+  <%= render @ticket.comments.select(&:persisted?) %>
+<% else %>
+  There are no comments for this ticket.
+<% end %>
+</div>
