Updating a comment's status, updates the ticket's status as well

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -4,6 +4,11 @@
   <p>
     <%= f.input :text %>
   </p>
+  <p>
+    <%= f.label :state_id %>
+    <%= f.select :state_id, @states.map { |s| [s.name, s.id] },
+          :selected => @ticket.state_id %>
+  </p>
   <%= f.button :submit %>
 <% end %>
 
