--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,6 @@
 <%= div_for(comment) do %>
   <h4><%= comment.user %></h4>
+  <%= state_for(comment) %>
   <%= simple_format(comment.text) %>
 <% end %>
 
