--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,14 @@
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
     </style>
     <%= stylesheet_link_tag "application", :media => "all" %>
+    <style>
+      <% for state in @states %>
+        .state_<%= state.name.parameterize %> {
+          background: <%= state.background %>;
+          color: <%= state.color %>;
+        }
+      <% end %>
+    </style>
     <!-- Le fav and touch icons -->
   <body>
 
