--- a/app/views/tickets/_ticket_form.html.erb
+++ b/app/views/tickets/_ticket_form.html.erb
@@ -2,8 +2,7 @@
   <p>
     <%= f.input :title %>
     <%= f.input :description %>
-    <%= label_tag :tags %>
-    <%= text_field_tag :tags, params[:tags] %>
+    <%= render 'tags/form' %>
   </p>
 
   <% number = 0 %>
