--- a/app/views/tags/_tag.html.erb
+++ b/app/views/tags/_tag.html.erb
@@ -1,1 +1,3 @@
-<span class="tag"><%= tag.name %></span>
+<span class="tag" id="tag-<%= tag.name.parameterize %>">
+  <%= link_to "x", remove_ticket_tag_path(@ticket, tag), :remote => true, :method => :delete, :id => "delete-#{tag.name.parameterize}" %>
+</span>
