--- a/app/views/tags/_tag.html.erb
+++ b/app/views/tags/_tag.html.erb
@@ -1,3 +1,6 @@
 <span class="tag" id="tag-<%= tag.name.parameterize %>">
-  <%= link_to "x", remove_ticket_tag_path(@ticket, tag), :remote => true, :method => :delete, :id => "delete-#{tag.name.parameterize}" %>
+  <% if can?(:tag, @ticket.project) || current_user.admin? %>
+    <%= link_to "x", remove_ticket_tag_path(@ticket, tag), :remote => true, :method => :delete, :id => "delete-#{tag.name.parameterize}" %>
+  <% end %>
+  <%= tag.name %>
 </span>
