Toggle watch/unwatch with a button

--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -30,6 +30,17 @@
   <% end %>
 </div>
 
+<div id="watchers">
+  <%= toggle_watching_button %>
+  <h4>Watchers</h4>
+  <ul>
+    <% @ticket.watchers.each do |watcher| %>
+      <li><%= watcher %></li>
+    <% end %>
+  </ul>
+</div>
+
+
 <%= render "comments/form" %>
 
 <h3>Comments</h3>
